Remove reference to virtual thread method in Aerospike Benchmark Tool. The jdk8 branch does not use virtual threads.